deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sproutfs
  labels:
    app.kubernetes.io/part-of: sproutfs
    purpose: demo
